# itmo-fp-hw1

./: .gitignore  README.md
hw1/: hw1.cabal
hw1/src/HW1/: T1.hs  T2.hs  T3.hs  T4.hs  T5.hs  T6.hs  T7.hs
