name:                hw1
version:             0.1.0.0
synopsis:            Synopsis for homework #1
description:         Homework #1 for FP ITMO course

homepage:            https://github.com/fp-ctd-itmo/homework-1-cannor147
license:             MIT
license-file:        LICENSE
author:              Erofey Bashunov
maintainer:          cannor147@gmail.com
copyright:           2021 Erofey Bashunov

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     HW1.T1
                       HW1.T2
                       HW1.T3
                       HW1.T4
                       HW1.T5
                       HW1.T6
                       HW1.T7
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
  default-language:    Haskell2010
